tests/negative/parser_bad20.sp
(* Statement before main body *)

(* Can't use statements here*)
no_function_returns_here();


main : int () {
    return 0;
}
